1.8.3 (June 28, 2023)
 - Bugfix - The `destroy` method has been updated to immediately flag the SDK client as destroyed, to prevent access to the storage when `getTreatment` and `track` methods are called after the SDK is destroyed.

1.8.2 (May 15, 2023)
 - Updated terminology on the SDKs codebase to be more aligned with current standard without causing a breaking change. The core change is the term split for feature flag on things like logs and IntelliSense comments.
 - Updated split storage modules to optimize some operations when using Redis and pluggable storages.
 - Updated some transitive dependencies for vulnerability fixes.

1.8.1 (February 7, 2023)
 - Updated a module import to remove a trailing comma that can cause issues with some bundlers.

1.8.0 (February 3, 2023)
 - Added flush data method to client.

1.7.3 (December 16, 2022)
 - Updated unique keys cache for Redis and Pluggable storages to optimize the usage of the underlying storage.
 - Updated some transitive dependencies for vulnerability fixes.
 - Bugfixing - Updated events and impressions cache in localhost mode in order to avoid memory leaks (Related to issue https://github.com/splitio/javascript-commons/issues/181).

1.7.2 (October 14, 2022)
 - Bugfixing - Handle `Navigator.sendBeacon` API exceptions in the browser, and fallback to regular Fetch/XHR transport in case of error.

1.7.1 (October 5, 2022)
 - Updated default value of `scheduler.featuresRefreshRate` config parameter to 60 seconds.

1.7.0 (October 4, 2022)
 - Added a new impressions mode for the SDK called NONE, to be used in factory when there is no desire to capture impressions on an SDK factory to feed Split's analytics engine. Running NONE mode, the SDK will only capture unique keys evaluated for a particular feature flag instead of full blown impressions.
 - Updated SDK telemetry to support pluggable storage, partial consumer mode, and synchronizer.