@@ -39,6 +39,8 @@ export function readinessManagerFactory(
   const segments: ISegmentsEventEmitter = segmentsEventEmitterFactory(EventEmitter);
   const gate: IReadinessEventEmitter = new EventEmitter();
 
+  let isDestroyed = false;
+
   // emit SDK_READY_FROM_CACHE
   let isReadyFromCache = false;
   if (splits.splitsCacheLoaded) isReadyFromCache = true; // ready from cache, but doesn't emit SDK_READY_FROM_CACHE
@@ -46,20 +48,22 @@ export function readinessManagerFactory(
 
   // emit SDK_READY_TIMED_OUT
   let hasTimedout = false;
-  let readyTimeoutId: ReturnType<typeof setTimeout>;
+  function timeout(flagAsDestroyed?: boolean) {
+    if (flagAsDestroyed) isDestroyed = true;
+    if (hasTimedout) return;
+    hasTimedout = true;
+    gate.emit(SDK_READY_TIMED_OUT, 'Split SDK emitted SDK_READY_TIMED_OUT event.');
+  }
+
+  let readyTimeoutId: number;
   if (readyTimeout > 0) {
-    readyTimeoutId = setTimeout(() => {
-      hasTimedout = true;
-      gate.emit(SDK_READY_TIMED_OUT, 'Split SDK emitted SDK_READY_TIMED_OUT event.');
-    }, readyTimeout);
+    readyTimeoutId = setTimeout(timeout, readyTimeout);
   }
 
   // emit SDK_READY and SDK_UPDATE
   let isReady = false;
   splits.on(SDK_SPLITS_ARRIVED, checkIsReadyOrUpdate);
   segments.on(SDK_SEGMENTS_ARRIVED, checkIsReadyOrUpdate);
-
-  let isDestroyed = false;
 
   function checkIsReadyFromCache() {
     isReadyFromCache = true;
@@ -107,6 +111,8 @@ export function readinessManagerFactory(
       refCount++;
       return readinessManagerFactory(EventEmitter, readyTimeout, splits);
     },
+
+    timeout,
 
     destroy() {
       isDestroyed = true;
